# devpod-ui

./: .gitignore  CLAUDE.md  LESSONS.md  README.md  TESTER-MON-DEV.md  dev-deploy.sh  mcp-list.md
Sdk/harpocrate-0.6.0/: .gitignore  PKG-INFO  README.md  pyproject.toml
Sdk/harpocrate-0.6.0/harpocrate/: __init__.py  cache.py  cli.py  client.py  exceptions.py  http.py  rotation.py  token.py
Sdk/harpocrate-0.6.0/tests/: conftest.py  test_rotation.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_global_config_hosts.py  002_recipe_profile_sources.py  003_node_join_tokens.py  004_user_config.py  005_profiles.py  006_workspace_status.py  007_recipes.py  008_workspace_ssh_keys.py  009_workspace_log_blobs.py  010_node_certificates.py  011_vault_pin.py  012_profile_gallery_source.py  013_harpo_certificates.py  014_harpo_secrets.py  015_hosts_slug_columns.py  016_recipe_volumes.py  017_mcp_gateway.py  018_mcp_runtime.py  019_workspace_init_recipes.py  020_host_usage.py  021_hypervisor_type_test_params.py  022_workspace_test_hosts.py  023_test_host_alias.py  024_server_local_domain.py  025_mcp_backend_app_url.py  026_mcp_grant_enabled.py  027_mcp_oauth.py  028_grant_backend_key_nullable.py  029_grant_scopes.py  030_compose_gallery.py  031_compose_catalog_sources.py  032_workspace_groups.py  033_vs_proxy_domain.py  034_cookie_domain.py  035_oidc_allow_local_auth.py  036_jinja2_and_messages.py  037_mcp_profiles.py  038_compose_deployment_uid.py  039_oauth_authcode_profile.py  040_compose_template_extra_files.py  (+5 more)
backend/scripts/: gen_mcp_docs.py
backend/src/portal/: app.py  openvsx.py  settings.py  spa.py  ssh_keys.py
backend/tests/: conftest.py  test_admin_grafana_oidc.py  test_admin_hosts.py  test_admin_logs_config.py  test_admin_oidc.py  test_auth_flags.py  test_bootstrap_ssh.py  test_bundled_recipes.py  test_caddy_verify.py  test_git_credential_test_route.py  test_host_config.py  test_hypervisor_test_params.py  test_locate_start_sh.py  test_logout.py  test_mcp_app_url.py  test_mcp_app_url_grant.py  test_mcp_grant_disabled.py  test_network_config.py  test_openvsx.py  test_proxmox_spec.py  test_session_cookie_domain.py  test_settings.py  test_spa.py  test_ssh_hostkey.py  test_ssh_key_generation.py  test_ssh_keys.py  test_ssh_proxy.py  test_system_secrets.py  test_test_hosts_alias.py  test_test_vm.py  test_vm_init.py
backend/tests/auth/: conftest.py  test_jwks.py  test_oidc.py  test_rbac.py  test_router.py
backend/tests/certificates/: test_keygen.py  test_service.py
backend/tests/compose/: test_db_auto_start.py  test_db_deployments.py  test_db_templates.py  test_env_builder.py  test_env_builder_context_vars.py  test_host_exec.py  test_models.py  test_override_builder.py  test_port_aliases.py  test_ports.py  test_routes_auto_start.py  test_routes_deployments.py  test_routes_nodes.py  test_routes_templates.py  test_service.py  test_tables.py  test_validation.py  test_validation_whitelist.py
backend/tests/config/: test_env_file.py  test_logs_config.py  test_models.py  test_store.py  test_workspace_spec_profile.py
backend/tests/db/: conftest.py  test_certificates.py  test_global_config.py  test_log_blobs.py  test_mcp.py  test_mcp_audit.py  test_mcp_catalog.py  test_node_certs.py  test_profiles.py  test_recipes.py  test_secrets.py  test_sources.py  test_ssh_keys.py  test_tokens.py  test_user_config.py  test_vault_keys.py  test_vault_pin.py  test_workspace_status.py
backend/tests/devpod/: conftest.py  fake_devpod.py  test_clone_url.py  test_env.py  test_git_connection_test.py  test_provider.py  test_provision.py  test_runner.py  (+3 more)
(+740 files in other folders)
