[project]
name = "workspace-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "fastapi[standard]>=0.111",
    "authlib>=1.3",
    "joserfc>=1.7",
    "itsdangerous>=2.1",
    "cryptography>=42.0",
    "bcrypt>=4.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "jinja2>=3.1",
    "harpocrate",
    "mcp>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9.12",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portal"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is the intended pattern

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["portal"]
mypy_path = "src"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Rend la "sortie pristine" opposable : toute API dépréciée (ex. réintroduire
# streamablehttp_client) ferait échouer les tests au lieu de passer en vert.
filterwarnings = ["error::DeprecationWarning"]

[tool.uv.sources]
harpocrate = { path = "../Sdk/harpocrate-0.6.0", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
