[project]
name = "harpocrate"
version = "0.6.0"
description = "Harpocrate SDK — client Python zero-knowledge pour Vault"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "argon2-cffi>=23",
    "bcrypt>=4.1",
    "pydantic>=2.6",
    "click>=8.1",
    "cachetools>=5.3",
]

[project.scripts]
harpocrate-gen = "harpocrate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-cachetools>=5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harpocrate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = false
